# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2021-02-02 Michael Truog   <mjtruog at protonmail dot com>

    * Add retry and retry_delay arguments to cloudi_service_map_reduce

2021-01-31 Michael Truog   <mjtruog at protonmail dot com>

    * Change cloudi_service_api_batch services_remove HTTP method
      from "get" to "delete" (due to modifying a queue)
    * Add the queue_dependencies argument to
      cloudi_service_api_batch for representing dependencies
      between queues for automatically managing service runtime
    * Add the queue_clear function to cloudi_service_api_batch

2021-01-30 Michael Truog   <mjtruog at protonmail dot com>

    * Fix default configuration HTTP server content security policy
      for access to the dashboard interface
    * hexpi integration test improvements
    * Update varpool

2021-01-20 Michael Truog   <mjtruog at protonmail dot com>

    * Update reltool_util

2021-01-01 Michael Truog   <mjtruog at protonmail dot com>

    * Add the queue_mode value to the CloudI Service API logging_status output
    * Update quickrand

2020-12-24 Michael Truog   <mjtruog at protonmail dot com>

    * Add services_restarted to the
      CloudI Service API nodes_status output for the local node

2020-12-19 Michael Truog   <mjtruog at protonmail dot com>

    * Set the LOGGER_FLOODING_DELTA_REMOTE constant based on testing
      to ensure the remote logging process load is more limited
    * Add CloudI log output when overload mode is exited with
      the duration of the overload state in a microseconds string
    * Remove limit from the allowed CloudI Service API services_update
      options that are allowed to change for an external service
      to avoid allowing data changes that don't modify the OS process
      when a new OS process is not created
        * Now all the external service configuration options related to
          the execution environment are kept static during the service's